--- a/components/StatsBar/StatsBar.module.css
+++ b/components/StatsBar/StatsBar.module.css
@@ -47,7 +47,7 @@
 .divider {
   width: 2px;
   height: 60px;
-  background-color: rgba(255,255,255,0.4);
+  background-color: rgba(0,0,0,0.1);
 }
 
 @media (max-width: 767px) {
